[tool.poetry]
name = "python-django-blog"
version = "0.1.0"
description = "My Django project"
authors = ["fooxeed <fooxeed@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env.dev"